--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
 
   <!-- SECSERVICES -->
 <div>
-
+  <div>
     <div class="containerservices text-center text-content">
-      <h2><br><br>://em que posso ajudar? -></h2>
+      <h2><br><br>Em que posso ajudar?</h2>
       <div class="rowservices">
         <div class="service">
           <i class="fas fa-laptop-code"></i>
@@ -138,21 +138,6 @@
             quae?
           </p>
         </div>
-        <div class="service">
-          <i class="fas fa-money-check-alt"></i>
-          <h2>Payroll</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi,
-            quae?
-          </p>
-        </div>
-        <div class="service">
-          <i class="fas fa-network-wired"></i>
-          <h2>Networking</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi,
-            quae?
-          </p>
         </div>
       </div>
     </div>
@@ -164,9 +149,9 @@
 
 <div class="vq4-position-relative vq4-z-index-1 vq4-overflow-hidden vq4-padding-y-xl vq4-bg-dark">
   <div class="vq4-margin-bottom-lg">
-    <h1 class="vq4-text-center">Vertical Timeline</h1>
+    <h1 style="font-size: medium" class="vq4-text-center">Confira alguns dos meus materiais:</h1>
   </div>
-
+  <br><br><br>
   <div class="vq4-container vq4-max-width-adaptive-lg">
     <div class="v-timeline js-v-timeline" data-animation="on">
       <section class="v-timeline__section js-v-timeline__section">
@@ -236,7 +221,7 @@
               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi praesentium dolore debitis cum nesciunt cumque placeat voluptatibus natus, necessitatibus numquam sunt, laborum possimus id?</p>
 
               <figure class="vq4-text-component__block">
-                <img src="../../../app/assets/img/vertical-timeline-img-1.jpg" alt="Image description">
+                <img src="./assets/images/space - Copy.png" alt="Image description">
               </figure>
             </div>
           </div>
@@ -310,7 +295,7 @@
     
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
-          <img src="/univers - REDOING/assets/images/Eltondeoliveira_profile.png" style="width:100%" alt="Avatar">
+          <img src="./assets/images/Eltondeoliveira_profile.png" style="width:100%" alt="Avatar">
           <div class="w3-display-bottomleft w3-container w3-text-black">
             <h2 style="color:white">Elton de Oliveira</h2>
           </div>
