--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   <!-- SECSERVICES -->
 <div>
   <div>
-    <div class="containerservices">
+    <div class="containerservices text-center">
       <h2><br><br>Em que posso ajudar?</h2>
       <div class="rowservices">
         <div class="service">
