--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="assets/css/main.scss" />
   </head>
 
-  <body class="minimal white-text-container" style="background-color: black;">
+  <body class="minimal">
     <div id="site-border-left"></div>
     <div id="site-border-right"></div>
     <div id="site-border-top"></div>
@@ -70,10 +70,10 @@
                   Hello World! <br />
                   <span id="typed-strings" class="hidden">
                     <span>Eu sou Elton</span>
-                    <span>O seu próximo Copywriter</span>
-                    <span>Especialista em Tecnologia</span>
-                    <span>Pronto para ajudar você</span>
-                    <span>A conquistar clientes por meio do conteúdo</span>
+                    <span>O seu próximo</span>
+                    <span>Copywriter</span>
+                    <span>Especialista </span>
+                    <span>em Tecnologia</span>
                   </span>
                   <span id="typed"></span>
                 </h1>
