--- a/index.html
+++ b/index.html
@@ -11,11 +11,8 @@
     <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-icon-180x180.png" />
     <link href="./assets/favicon.ico" rel="icon" />
     <title>Elton de Oliveira</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link href="./main.3f6952e4.css" rel="stylesheet" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="assets/css/main.scss" />
-
-<!-- $$$$ -->
 </head>
 <header class="header-outer">
   <nav class="navbar navbar-fixed-top navbar-inverse" font style="background: rgba(15, 15, 15, 0.877);">
@@ -46,8 +43,6 @@
   </nav>
 </header>
 
-<!-- $$$$ -->
-
 <body class="minimal white-text-container ac" style="background-color: black;">
     <div id="site-border-left"></div>
     <div id="site-border-right"></div>
@@ -59,8 +54,8 @@
         <div class="container">
           <div class="row">
             <div class="col-xs-12">
-              <div class="hero-full-wrapper" >
-                <div class="text-content margin" >
+              <div class="hero-full-wrapper">
+                <div class="text-content margin">
                   <h1 style="font-size: 6vw; color:whitesmoke;">
                     Hello World! <br />
                     <span id="typed-strings" class="hidden">
@@ -77,37 +72,30 @@
         </div>
       </div>
     </div>
-
-
-
-      <div class="col-xs-12 container ac">
-        <div class="hero-full-wrapper background-image-container ac" style="background-image: url('./assets/images/TECNOLOGY.png');">
-          <div class="ac">
-                <div class="center idea ac">
-                  <img id="headshot" style="margin-top:-18vh" src="./assets/images/Eltondeoliveira_profile.png" />
+    <div class="col-xs-12 container text-center">  
+              <div class="center idea">
+                <img id="headshot" style="margin-top:-18vh" src="./assets/images/Eltondeoliveira_profile.png" />
+              </div>
+              <div class="service ">
+                <div>
+                <h2 class="ideia">
+                  Elton<br> de Oliveira
+                </h2>
                 </div>
-                <div class="text-center estreito" style="background-color: rgba(0, 0, 0, 0.712);">
-                  <div>
-                  <h2 class="ideia">
-                    Elton de <br>Oliveira
-                  </h2>
-                  </div>
-                  <h3 class="ideia"></h3>
-                    Copywriter
-                  </h3>
-                  <p class="p ideia" style="font-size: medium; padding-left: 10vw; padding-right: 10vw; padding-top:0; padding-bottom:0">
-                      I'm an illustrator, graphic designer, and front-end developer doing business as <a href="//rookishdesign.com"
-                      target="">Rookish Design</a> in the Ballard neighborhood of Seattle, WA. I've been working through
-                      <a href="//freecodecamp.com/denmch" target="_blank">FreeCodeCamp</a> to help build up my JavaScript skills, and
-                      you can see some of my projects below.
-                  </p>
-                  <br>
-                </div>
+                <h3 class="ideia"></h3>
+                  Copywriter
+                </h3>
+                <p class="p ideia contentor">
+                  Com formação na área de Letras e bastante curioso pela área de tecnologia, já tive experiências em quase qualquer área do processo de produção de conteúdo. Às vezes sou desenvolvedor Web freelancer, mas minha área de atuação mesmo é escrever, planejar e distribuir os melhores conteúdos possíveis. Essas especialidades bastante diversas, favorecem na hora da criação de um conteúdo rico e esclarecedor para seu cliente, seja sobre seus produtos ou seja seus serviços. Também é uma vantagem que ajudam durante o desenvolvimento de cursos, tutoriais ou treinamentos.
+
+                </p>
+                <br>
               </div>
             </div>
-      </div>
+          </div>
+    </div>
 
-  <div>
+    <div>
     <div class="text-center ideia"><h2 class="h2 white-text-container">Confira em que posso ajudar</h2>
               <hr/> 
               <div class="col-xs-12">
@@ -157,7 +145,6 @@
                 </div>
               </div>
             </div>
-          </div>
         </div>
       </div>
     </div>
