--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
           <li>
-            <a href="./index.html" class="html" style="color: rgb(255, 255, 255);" title="">Home</a>
+            <a href="./index.html" class="" style="color: rgb(255, 255, 255);" title="">Home</a>
           </li>
           <li>
-            <a href="#materiais" class="html" style="color: rgb(255, 255, 255);">+Materiais</a>
+            <a href="#materiais" class="" >+Materiais</a>
           </li>
           <li>
-            <a href="#sobre" style="color: rgb(255, 255, 255);" title="">+Sobre mim</a>
+            <a href="#sobre" title="">+Sobre mim</a>
           </li>
           <li>
-            <a href="#contato" style="color: rgb(255, 255, 255);" title="">+Contato</a>
+            <a href="#contato"  title="">+Contato</a>
           </li>
         </ul>
       </div>
