--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
       <!-- CONTAT-->
       <div>
         <div class="text-center background-image-container"
-          style="background-image: url('./assets/images/floatinginspace.png');"">
+          style="background-image: url('./assets/images/floatinginspace.png');">
       <div>
         <h2 class=" h2">
           Quer saber mais? Entre em contato agora mesmo <br />
