--- a/index.html
+++ b/index.html
@@ -89,10 +89,11 @@
         </h2>
       </div>
       <div class="s1 servix">
-        <p class="p ideia text-center contentor s1">
-          Copywriter com formação na área de Letras e bastante curioso pela área de tecnologia, já tive experiências em quase
-          qualquer área do processo de produção de conteúdo. Às vezes sou desenvolvedor Web freelancer, mas minha área
-          de atuação mesmo é escrever, planejar e distribuir os melhores conteúdos possíveis. Essas especialidades
+        <p class="text-center contentor s1">
+          Copywriter com formação na área de Letras e bastante ativo na área de tecnologia, já tive experiências em quase
+          qualquer área do processo de produção de conteúdo. Às vezes sou Desenvolvedor Web Freelancer, mas minha área
+          de atuação preferida é escrever, planejar e distribuir os melhores conteúdos possíveis. 
+          <br> Essas especialidades
           bastante diversas, favorecem na hora da criação de um conteúdo rico e esclarecedor para seu cliente, seja
           sobre seus produtos ou seja seus serviços. Também é uma vantagem que ajudam durante o desenvolvimento de
           cursos, tutoriais ou treinamentos.
