--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   </nav>
 </header>
 
-<body class="minimal white-text-container ac" style="background-color: black;">
+<body class="minimal white-text-container" style="background-color: black;">
   <div id="site-border-left"></div>
   <div id="site-border-right"></div>
   <div id="site-border-top"></div>
@@ -324,7 +324,7 @@
       <!-- End of Timeline -->
     </div class="">
     <!--RESUME SECTION-->
-    <div class="background-image-container" style="background-image: url('./assets/images/floatinginspace.png">
+    <div class="background-image-container" style="background-image: url('./assets/images/TECNOLOGY.png">
       <a name="pageone" class="anchor" id="top"></a>
       <h3 class="ideia text-center backgound">
         Um pouco da minha história
@@ -538,31 +538,23 @@
             </div>
           </div>
         </div>
-  <div>
+        <div class="hero-full-container text-center background-image-container" style="background-image: url('./assets/images/floatinginspace.png')">
+     
+        <div class=" text-flicker-in-glow text-center">
 
-  
-        <a name="pageone" class="anchor" id="top"></a>
+          <h2 style="text-align:center; padding:12px">Precisando de ajuda com seus conteúdos?</h2>
 
-        <!-- Page Container -->
-        <div class="bgsection">
-          <!-- Left Column -->
-
-          <div class=" text-flicker-in-glow text-center">
-
-            <h2 style="text-align:center; padding:12px">Precisando de ajuda com seus conteúdos?</h2>
-
-          </div>
         </div>
-    </div>
-  </div>
-    <div class="text-center">
-      <div class="w3-container w3-card w3-white w3-margin-bottom">
-        <div class="w3-container w3-card w3-white">
-          <h2>Não deixe de entrar agorma mesmo em contato.
-          </h2>
-          <p>
-            Fique à vontade para me chamar em qualquer um desses canais:
-          </p>
+
+    
+  <div class="text-center"></div>
+          <div class="w3-container w3-card w3-white w3-margin-bottom">
+            <div class="w3-container w3-card w3-white">
+              <h2>Não deixe de entrar agorma mesmo em contato.
+              </h2>
+              <p>
+              Fique à vontade para me chamar em qualquer um desses canais:
+              </p>
 
         </div>
       </div>
