--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
                   <span>Eu sou Elton</span>
                   <span>O seu próximo</span>
                   <span>Copywriter</span>
+                  <span>SEO Especialist</span>
+                  <span>Analista de Marketing</span>
+                  <span>Revisor</span>
+                  <span>Analista de Tecnologia</span>
                 </span>
                 <span id="typed"></span>
               </h1>
