--- a/index.html
+++ b/index.html
@@ -93,102 +93,101 @@
             Elton de<br> Oliveira
             <h3> Copywriter e Produtor Digital</h3>
           </h2>
-        </div>
-        <div class="servix ">
-          <p class="text-center contentor s1" style="grid-template-columns: repeat(auto-fit, minmax(33%, 1fr));">
-            Copywriter com formação na área de Letras e bastante ativo na área de tecnologia, já tive experiências em
-            quase
-            qualquer área do processo de produção de conteúdo. Às vezes sou Desenvolvedor Web Freelancer, mas minha área
-            de atuação preferida é escrever, planejar e distribuir os melhores conteúdos possíveis.
-            <br> Essas especialidades
-            bastante diversas, favorecem na hora da criação de um conteúdo rico e esclarecedor para seu cliente, seja
-            sobre seus produtos ou seja seus serviços. Também é uma vantagem que ajudam durante o desenvolvimento de
-            cursos, tutoriais ou treinamentos.
-          </p>
-        </div>
-        <div class="text-center ideia">
-          <h2 class="h2 white-text-container">Confira em que posso ajudar</h2>
-          <hr />
-          <div class="col-xs-12">
-            <div class="rowservices">
+          <div class="servix">
+            <p class="darki" style="padding-right: 20%;padding-left: 20%;font-size:0.6em;">
+              Copywriter com formação na área de Letras e bastante ativo na área de tecnologia, já tive experiências em
+              quase
+              qualquer área do processo de produção de conteúdo. Às vezes sou Desenvolvedor Web Freelancer, mas minha área
+              de atuação preferida é escrever, planejar e distribuir os melhores conteúdos possíveis.
+              <br><br> Essas especialidades
+              bastante diversas, favorecem na hora da criação de um conteúdo rico e esclarecedor para seu cliente, seja
+              sobre seus produtos ou seja seus serviços. Também é uma vantagem que ajudam durante o desenvolvimento de
+              cursos, tutoriais ou treinamentos.
+            </p>
+          </div>
+          <div class="text-center ideia">
+            <h2 class="h2 white-text-container">Confira em que posso ajudar</h2>
+            <hr />
+            <div class="col-xs-12">
+              <div class="rowservices">
 
-              <div class="service">
-                <i class="fas fa-laptop-code" style="color: aqua;"></i><br />
-                <h2 style="letter-spacing: 1px;">SEO<br></h2>
-                <br>
-                <p>Search Engine Optimazetion pode ser a resposta para atingir o cliente perfeito para seus negócios.
-                  Baseado em pesquisas especificas para sua empresa, seu conteúdo vai se destacar dos concorrentes.</p>
+                <div class="service">
+                  <i class="fas fa-laptop-code" style="color: aqua;"></i><br />
+                  <h2 style="letter-spacing: 1px;">SEO<br></h2>
+                  <br>
+                  <p>Search Engine Optimazetion pode ser a resposta para atingir o cliente perfeito para seus negócios.
+                    Baseado em pesquisas especificas para sua empresa, seu conteúdo vai se destacar dos concorrentes.</p>
+                </div>
+
+                <div class="service">
+                  <i class="fas fa-laptop-code" style="color: aqua;"></i><br />
+                  <h2 style="letter-spacing: 1px;">Copyriting<br></h2>
+                  <br>
+                  <p>Por meio de técnicas de escrita adquiridas em mais de 10 anos de atuação, posso construir um material
+                    que certamente vai reter a atenção do seu cliente, melhorando a imagem da sua marca.</p>
+                </div>
+
+                <div class="service">
+                  <i class="fas fa-chart-line" style="color: aqua;"></i>
+                  <br />
+                  <h2 style="letter-spacing: 1px"> Marketing</h2>
+                  <p>Precisa de ajuda com a produção ou planejamento de conteúdos para o Marketing ou PPC? Seja qual o
+                    meio preferido, podemos ajudar muito o seu negócio a escalar nas vendas por meio dos anúncios.</p>
+                </div>
+
+                <div class="service">
+                  <i class="fab fa-sketch" style="color: aqua;"></i>
+                  <br />
+                  <h2 style="letter-spacing: 1px">GhostWriting</h2>
+                  <p>Precisa de ajuda para criar os melhor conteúdos para seu público, mas está sem tempo? Estou à
+                    disposiçao para ajudar no desenvolvimento e na escrita do seu material — e tudo manqtido no sigilo.</p>
+                </div>
+
+                <div class="service">
+                  <i class="fas fa-database" style="color: aqua;"></i>
+                  <br />
+                  <h2 style="letter-spacing: 1px">WebPages</h2>
+                  <p>Um dos meus hobbies preferidos é estudar programação. O desenvolvimento deste site que você está
+                    acessando foi todo realizado por mim, por meio de auxílio de alguns tutoriais e da documentação.
+                    Deixe-me sabendo caso precise, desse tipo de serviço!</p>
+                </div>
+
+                <div class="service">
+                  <i class="fas fa-mobile-alt" style="color: aqua;"></i>
+                  <br />
+                  <h2 style="letter-spacing: 1px">Revisão</h2>
+                  <p>Precisa de ajuda para conquistar aquela publicação na revista dos sonhos? Garanto a revisão completa
+                    do seu artigo ou tese na formatação escolhida. Experiência ampla em revisão de materiais acadêmicos.
+                  </p>
+                </div>
+
+                <div class="service">
+                  <i class="fas fa-file-invoice" style="color: aqua;"></i>
+                  <br />
+                  <h2 style="letter-spacing: 1px">Cursos</h2>
+                  <p>Precisa de um curso para seua escola ou organizar um treinamento para seus colaboradores na área de
+                    tecnologia? Com certeza, eu posso ajudar!</p>
+                </div>
+
+                <div class="service">
+                  <i class="fas fa-file-invoice" style="color: aqua;"></i>
+                  <br />
+                  <h2 style="letter-spacing: 1px">Assessorias</h2>
+                  <p>Precisa de algum conselho sobre o que investir na criaçao de conteúdo na sua empresa de tecnologia ou
+                    no seu comércio eletrônico? Saiba que estou à disposição para ajudar a superar qualquer desafio. </p>
+                </div>
+
+                <div class="service">
+                  <i class="fas fa-file-invoice" style="color: aqua;"></i>
+                  <br />
+                  <h2 style="letter-spacing: 1px">Entre outros</h2>
+                  <p>Precisando de qualquer serviço relacionado à comunicação digital, basta entrar em contato pelos links
+                    fornecidos no fim desta página. Espero o seu chamado em breve!</p>
+                </div>
+
               </div>
-
-              <div class="service">
-                <i class="fas fa-laptop-code" style="color: aqua;"></i><br />
-                <h2 style="letter-spacing: 1px;">Copyriting<br></h2>
-                <br>
-                <p>Por meio de técnicas de escrita adquiridas em mais de 10 anos de atuação, posso construir um material
-                  que certamente vai reter a atenção do seu cliente, melhorando a imagem da sua marca.</p>
-              </div>
-
-              <div class="service">
-                <i class="fas fa-chart-line" style="color: aqua;"></i>
-                <br />
-                <h2 style="letter-spacing: 1px"> Marketing</h2>
-                <p>Precisa de ajuda com a produção ou planejamento de conteúdos para o Marketing ou PPC? Seja qual o
-                  meio preferido, podemos ajudar muito o seu negócio a escalar nas vendas por meio dos anúncios.</p>
-              </div>
-
-              <div class="service">
-                <i class="fab fa-sketch" style="color: aqua;"></i>
-                <br />
-                <h2 style="letter-spacing: 1px">GhostWriting</h2>
-                <p>Precisa de ajuda para criar os melhor conteúdos para seu público, mas está sem tempo? Estou à
-                  disposiçao para ajudar no desenvolvimento e na escrita do seu material — e sigilosamente.</p>
-              </div>
-
-              <div class="service">
-                <i class="fas fa-database" style="color: aqua;"></i>
-                <br />
-                <h2 style="letter-spacing: 1px">WebPages</h2>
-                <p>Um dos meus hobbies preferidos é estudar programação. O desenvolvimento deste site que você está
-                  acessando foi todo realizado por mim, por meio de auxílio de alguns tutoriais e da documentação.
-                  Deixe-me sabendo caso precise, desse tipo de serviço!</p>
-              </div>
-
-              <div class="service">
-                <i class="fas fa-mobile-alt" style="color: aqua;"></i>
-                <br />
-                <h2 style="letter-spacing: 1px">Revisão</h2>
-                <p>Precisa de ajuda para conquistar aquela publicação na revista dos sonhos? Garanto a revisão completa
-                  do seu artigo ou tese na formatação escolhida. Experiência ampla em revisão de materiais acadêmicos.
-                </p>
-              </div>
-
-              <div class="service">
-                <i class="fas fa-file-invoice" style="color: aqua;"></i>
-                <br />
-                <h2 style="letter-spacing: 1px">Cursos</h2>
-                <p>Precisa de um curso para seua escola ou organizar um treinamento para seus colaboradores na área de
-                  tecnologia? Com certeza, eu posso ajudar!</p>
-              </div>
-
-              <div class="service">
-                <i class="fas fa-file-invoice" style="color: aqua;"></i>
-                <br />
-                <h2 style="letter-spacing: 1px">Assessorias</h2>
-                <p>Precisa de algum conselho sobre o que investir na criaçao de conteúdo na sua empresa de tecnologia ou
-                  no seu comércio eletrônico? Saiba que estou à disposição para ajudar a superar qualquer desafio. </p>
-              </div>
-
-              <div class="service">
-                <i class="fas fa-file-invoice" style="color: aqua;"></i>
-                <br />
-                <h2 style="letter-spacing: 1px">Entre outros</h2>
-                <p>Precisando de qualquer serviço relacionado à comunicação digital, basta entrar em contato pelos links
-                  fornecidos no fim desta página. Espero o seu chamado em breve!</p>
-              </div>
-
             </div>
           </div>
-        </div>
       </div>
       <div>
         <a name="pageone" class="anchor" id="top"></a>
@@ -328,7 +327,7 @@
       <!-- End of Timeline -->
     </div class="">
     <!--RESUME SECTION-->
-    <div class="background-image-container" style="background-image: url('./assets/images/TECNOLOGY.png">
+    <div class="background-image-container" style="background-image: url('./assets/images/TECNOLOGY.png')">
       <a name="pageone" class="anchor" id="top"></a>
         <h2 style="padding:15%; background-color:black;" class="tracking-in-expand-fwd servix ideia text-center backgound" >
           Um pouco da minha história
