--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <header class="header-outer">
   <nav class="navbar navbar-fixed-top navbar-inverse" font style="background: rgba(15, 15, 15, 0.877);">
     <div class="header-inner responsive-wrapper">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse"
+      <button type="button" class=" neonText navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse"
         aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
@@ -28,7 +28,7 @@
         <span class="icon-bar"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbar-collapse">
-        <ul class="nav navbar-nav navbar-right">
+        <ul class="neonText nav navbar-nav navbar-right">
           <li>
             <a href="./index.html" class="" style="color: rgb(255, 255, 255);" title="">Home</a>
           </li>
@@ -540,9 +540,9 @@
           </div>
         </div>
         <div class="servi hero-full-container text-center background-image-container" style="background-image: url('./assets/images/floatinginspace.png');">
-          <div class="text-center text-flicker-in-glow s1">
+          <div class="text-center  s1">
 
-            <h2 style="text-align:center; padding:12px; background-color:black "> <br />Precisando de ajuda com seus conteúdos?</h2>
+            <h2 class="neonText" style="text-align:center; padding:12px; margin-bottom:50px"> <br />Precisando de ajuda com seus conteúdos?</h2>
 
           </div>
           <div class="text-center"></div>
@@ -557,9 +557,9 @@
                 </div>
             </div>
             
-            <div class="servix center">
+            <div class="center gg servix">
 
-              <div>
+              <div class="">
                 <i class="fa-brands fa-google w3-text-teal ">
 
                 </i>
@@ -611,8 +611,9 @@
 <br />
 <br />
 <br />
+
 <footer>
-  <footer class="footer text-center">
+  <footer class="footer neonText text-center">
     Elton de Oliveira [36.338.912/0001-15] | Criado com muito ♡
   </div>
 </footer>
