--- a/index.html
+++ b/index.html
@@ -329,10 +329,10 @@
     <!--RESUME SECTION-->
     <div class="background-image-container" style="background-image: url('./assets/images/TECNOLOGY.png')">
       <a name="pageone" class="anchor" id="top"></a>
-        <h2 style="padding:15%; background-color:black;" class="tracking-in-expand-fwd servix ideia text-center backgound" >
-          Um pouco da minha história
+        <h2  class="neonText servix ideia text-center">
+          Vivências e Oportunidades
         </h2>
-        <hr />
+
         <!-- Page Container -->
         <div class=" w3-row-padding">
           <!-- Left Column -->
