--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <span class="icon-bar"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbar-collapse">
-        <ul class="neonText nav navbar-nav navbar-right">
+        <ul class="nav navbar-nav navbar-right">
           <li>
             <a href="./index.html" class="" style="color: rgb(255, 255, 255);" title="">Home</a>
           </li>
@@ -329,9 +329,11 @@
     <!--RESUME SECTION-->
     <div class="background-image-container" style="background-image: url('./assets/images/TECNOLOGY.png')">
       <a name="pageone" class="anchor" id="top"></a>
-        <h2  class="neonText servix ideia text-center">
-          Vivências e Oportunidades
+        <h2  class=" servix ideia text-center">
+          Vivências e Oportunidades <br />
         </h2>
+        <br />
+        <br />
 
         <!-- Page Container -->
         <div class=" w3-row-padding">
@@ -344,9 +346,9 @@
                   <h2 class="">Elton <br>de Oliveira</h2>
                 </div>
               </div>
-              <div class="" style="align-content:right;">
+              <div class="direit" style="text-align:left;">
                 <hr>
-                <p class="">
+                <p class="direit">
                 <p class="h3">
                   <i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills
                 </p>
@@ -427,11 +429,11 @@
             <!-- End Left Column -->
           </div>
           <!-- Right Column -->
-          <div class="w3-twothird">
+          <div class="w3-twothird direit">
             <div class="w3-container w3-card w3-white w3-margin-bottom">
               <div class="w3-container w3-card w3-white">
-                <h2 class="w3-text-white w3-padding-16">
-                  <i class="fa fa-suitcase fa-fw w3-text-teal"></i> Últimas Experiências
+                <h2 class=" w3-text-white w3-padding-16">
+                  <i class="fa fa-suitcase fa-fw w3-text-teal "></i> Últimas Experiências
                 </h2>
 
                 <div class=".vq4-container">
@@ -492,13 +494,11 @@
                           iste.</p>
                         <hr>
                       </div>
-                    </div>
-                    <div class="w3-container w3-card w3-white">
-                      <h2 class="w3-text-white ideia w3-padding-16">
-                     
-                        <i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Educação
+                        <i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>
+                          <h2>
+                          Educação
                 
-                      </h2>
+                         </h2>
                       <div class="w3-container">
                         <h5 class="w3-opacity">
                           <b>W3Schools.com</b>
@@ -540,7 +540,7 @@
           </div>
         </div>
         <div class="servi hero-full-container text-center background-image-container" style="background-image: url('./assets/images/floatinginspace.png');">
-          <div class="text-center  s1">
+          <div class="text-center s1">
 
             <h2 class="neonText" style="text-align:center; padding:12px; margin-bottom:50px"> <br />Precisando de ajuda com seus conteúdos?</h2>
 
