nao consigo fazer colunas no responsivo

--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
           <div class="text-center"></div>
             <div class="servi">
                 <div class="">
-                  <h2>Não deixe de entrar agorma mesmo em contato.
+                  <h2>Não deixe de entrar agora mesmo em contato.
                   </h2>
                   <p>
                     Fique à vontade para me chamar em qualquer um desses canais:
@@ -599,6 +599,10 @@
                     <span> @eltoliveira</span>
                   </a>
 
+                  <br />
+                  <br />
+                  <br />
+                  <br />
 
               </div>
             </div>
@@ -611,6 +615,12 @@
 <br />
 <br />
 <br />
+<br />
+<br />
+
+<br />
+<br />
+
 
 <footer>
   <footer class="footer neonText text-center">
