--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <h3> Copywriter e Produtor Digital</h3>
           </h2>
           <div class="servix">
-            <p class="darki" style="padding-right: 20%;padding-left: 20%;font-size:0.6em;">
+            <p class="darki p">
               Copywriter com formação na área de Letras e bastante ativo na área de tecnologia, já tive experiências em
               quase
               qualquer área do processo de produção de conteúdo. Às vezes sou Desenvolvedor Web Freelancer, mas minha área
