--- a/index.html
+++ b/index.html
@@ -64,11 +64,19 @@
 					<h2 class="container ideia">Elton de<br>
 					Oliveira</h2>
 					<h3>Copywriter<br>
-					e Produtor Digital</h3><br />
+					e Produtor Digital</h3>
 					<div class="servix ">
-						<p class="darki p">Com formação em Letras e bastante ativo na área de tecnologia, já tive experiências em quase qualquer área do processo de produção de conteúdo. Às vezes sou Desenvolvedor Web Freelancer, mas minha área de atuação preferida é escrever, planejar e distribuir os melhores conteúdos possíveis.<br>
-						<br>
-						Essas especialidades, bastante diversas entre si, certamente favorecem na hora da criação de um conteúdo rico em informções realmente relevantes e esclarecedor para seu cliente, seja sobre seus produtos, seja sobre seus serviços. É uma vantagem que pode ajudar durante o desenvolvimento de cursos, tutoriais ou treinamentos em novas ferramentas para seus colaboradores.</p>
+						<p class="darki">
+							Com formação em Letras e bastante ativo nos temas atuais de tecnologia. Já tive experiências em quase qualquer área do processo de produção de conteúdo. 
+							<br>
+							<br>Às vezes sou Desenvolvedor Web Freelancer, mas minha área de atuação preferida é escrever, planejar e distribuir os melhores conteúdos possíveis.
+							<br>
+							<br>Essas especialidades, bastante diversas entre si, certamente favorecem na hora da criação de um conteúdo rico em informções realmente relevantes e esclarecedor para seu cliente. 
+							<br>
+							<br>Seja sobre seus produtos, seja sobre seus serviços, essa é uma vantagem que vai ajudar muito durante o desenvolvimento de conteúdos, tutoriais ou treinamentos em novas ferramentas para seus colaboradores.
+							<br>
+							<br>Esse site foi montado para mostrar um pouco do meu trabalho para você e como posso auxiar no desenvolvimento de seu próximo projeto. Tenha uma boa leitura. Espero seu contato!
+						</p>
 					</div>
 					<div class="text-center ideia">
 						<h2 class="h2 branco">Confira em que posso ajudar</h2>
@@ -76,8 +84,8 @@
 						<div class="col-xs-12">
 							<div class="rowservices">
 								<div class="service">
-									<i class="fas fa-laptop-code" style="color: aqua;"></i><br>
-									<h2 style="letter-spacing: 1px;">SEO<br></h2><br>
+									<i class="fas fa-laptop-code"></i><br>
+									<h2>SEO<br></h2><br>
 									<p>Search Engine Optimazetion pode ser a resposta para atingir o cliente perfeito para seus negócios. Baseado em pesquisas especificas para sua empresa, seu conteúdo vai se destacar dos concorrentes.</p>
 								</div>
 								<div class="service">
@@ -125,17 +133,11 @@
 					</div>
 				</div>
 				<div>
-					<a class="anchor" id="top" name="pageone"></a>
-					<div class="darki">
-						<div class="container">
-							<div class="text-content margin">
-								<h2 class="H1especial">Veja alguns dos meus materiais<br>
-								<span class="text-pop-up-top">⬇⬇⬇</span> </h2>
-							</div>
-							<h2 class="branco h2">A seguir você encontra alguns dos materiais e projetos já desenvolvidos.</h2><br>
-						</div>
+					<a class="anchor" id="top" name="materiais"></a>
+
+					<div class="darki bgsection">
+						<h3 class="servix">A seguir, você encontra alguns dos materiais e projetos já desenvolvidos</h3><br>
 					</div>
-					<div class="darki"></div>
 					<div class="container darki col-xs-12 container text-center">
 						<div class="v-timeline js-v-timeline" data-animation="on">
 							<section class="v-timeline__section js-v-timeline__section">
@@ -394,9 +396,9 @@
 						</div>
 					</div>
 				</div>
-        <br />
-        <br />
-        <br />
+				<br />
+				<br />
+				<br />
 				<div class="servi bgsection hero-full-container background-image-container" style="background-image: url('./assets/images/floatinginspace.png');">
 					<div class="text-center neonText s1">
 						<h2><br>
